- trying to add web fonts

--- a/rpj-webclient/src/styles/settings.scss
+++ b/rpj-webclient/src/styles/settings.scss
@@ -8,3 +8,6 @@
 // @use 'vuetify' with (
 //   $color-pack: false
 // );
+
+// add the fonts from the webfont loader
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display
